--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,16 @@
   <title>Background Attachment</title>
 </head>
 <body>
-    <app-nav-bar></app-nav-bar>
-    <router-outlet></router-outlet>
-    <div class="footer">
+    <app-nav-bar></app-nav-bar> 
+    <div id="main">
+      <router-outlet></router-outlet>
+    </div>
+    
+    
+    <!--<div class="footer">
       <app-footer></app-footer>
     
-    </div>
+    </div> -->
    
 
 </body>
