--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,11 @@
 }
 
 
+#main {
+    width: 100%;
+    height: 100%;
+}
+
 .content-3
 {   
     background-image: url('../assets/img/LandinPage/body/black.jpg');
