--- a/src/app/shared/modal-register/modal-register.component.html
+++ b/src/app/shared/modal-register/modal-register.component.html
@@ -45,7 +45,7 @@
                         <br>
                         <div class="row justify-content-md-center data-modal-2">
                             <div class="col-md-12">
-                                <button (click)="logIn(user,password)"  class="btn btn-lg btn-light">INICIA SESIÓN</button>
+                                <button (click)="logIn(user,password)" data-dismiss="createLabel"  class="btn btn-lg btn-light">INICIA SESIÓN</button>
                             </div>
                          
                         </div>
@@ -57,4 +57,4 @@
     </div>
 
 </ng-template>
-<button class="btn btn-dark  button-li" (click)="modal.open(contenido)">Iniciar Sesión</button>
+<button class="btn btn-dark  button-li" (click)="modalService.open(contenido)">Iniciar Sesión</button>
