--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
             <div class="container-fluid options-1">
                 <div class="row">
 
-                    <div class="col-md-4">
+                    <div *ngIf="" class="col-md-4">
                         
                       <app-modal-sign-in></app-modal-sign-in>
                     </div>
