--- a/src/app/landing-page/components/body/body.component.css
+++ b/src/app/landing-page/components/body/body.component.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     font-family: 'Roboto',sans-serif;
     overflow-x: hidden;
+    background-color: white !important;
 }
 
 h1 
