--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -8,21 +8,14 @@
 </head>
 <body>
 <!-- Componente SIDE BAR USER-->
-    <div class="side-bar">
-        <div class="side-option s-active"> <a href="#"><img  class="img-side" src="../../../assets/img/PNG/Monito1.png" alt=""></a><h5 class="text-option"><a id="user" class="link-option" href="#"> Mi Cuenta</a></h5></div>
-        <hr class="hr-side">
-        <div class="side-option"> <a href="#"><img  class="img-side" src="../../../assets/img/PNG/Control.png" alt=""></a><h5 class="text-option"><a id="lobby" class="link-option" href="#">Lobby</a></h5></div>
-        <hr class="hr-side">
-        <div class="side-option"> <a href="#"><img  class="img-side" src="../../../assets/img/PNG/Ayuda.png" alt=""></a><h5 class="text-option"><a id="help" class="link-option" href="#">Ayuda</a></h5></div>
-        <hr class="hr-side">
-</div>  
-<!-- -->
-    <div id="user-info">
-        <p>
-            {{ user | json }}
-        </p>
-    </div>
+    
 
+<div class="container-pages">
+    <router-outlet></router-outlet>
+   
+</div>
+
+   
 
    
 </body>
