--- a/src/app/shared/modal-sign-in/modal-sign-in.component.css
+++ b/src/app/shared/modal-sign-in/modal-sign-in.component.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Roboto';
+    src: "../../../assets/fonts/Roboto-Bold.ttf";
+  }
+
+*{
+    font-family: 'Roboto' !important;
+}
+
+
+
+
 .button-si{
     position: relative;
     font-size: 20px;
