--- a/src/app/shared/modal-sign-in/modal-sign-in.component.html
+++ b/src/app/shared/modal-sign-in/modal-sign-in.component.html
@@ -55,7 +55,7 @@
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="Correo" formControlName="email" aria-label="Username">
                                         <span class="input-group-text">@</span>
-                                        <input type="text" class="form-control" placeholder="Dominio(Gmail,Hotmail,Outlook,etc.)" formControlName="email_dns" style="font-size: 11px;" aria-label="Server">
+                                        <input type="text" class="form-control" placeholder="Dominio(Gmail,Hotmail,Outlook,etc.)" formControlName="email_dns" aria-label="Server">
                                         
                                         
                                     </div>
