--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <app-nav-bar></app-nav-bar> 
-    <div id="main">
+    <div [ngStyle]="{'background-color': authService.dataUser.value.id === '' ? 'white' : '#070a10' }">
       <router-outlet></router-outlet>
     </div>
     
     
-    <!--<div class="footer">
+    <div class="footer">
       <app-footer></app-footer>
-    
-    </div> -->
+    </div>
    
 
 </body>
