--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
 
 #main {
     width: 100%;
-    height: 100%;
+    background-color: #070a10;
 }
 
 .content-3
@@ -90,4 +90,5 @@
     align-items: center;
     text-align: center;
     font-family: 'truly';
+    z-index: 4 !important;
 }
