--- a/src/app/protected/dashboard/components/lobby-user/lobby-user.component.css
+++ b/src/app/protected/dashboard/components/lobby-user/lobby-user.component.css
@@ -20,8 +20,7 @@ body{
 .container-pages{
     position: relative;
     width: 100%;
-    height: 1000px;
-    background-color: red;
+    height: 900px;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -60,13 +59,13 @@ body{
     background-color: #151e23;
     border-right: 2px solid rgb(226, 178, 19) ;
     width: 95px;
-    min-height: 1000px;
+    min-height: 866px;
     color: white;
     text-decoration: none;
     font-size: 10px;
     margin: 0;
     padding: 15px;
-    z-index: 2;
+    z-index: 1;
     transition: all ease-in 100ms;
 }
 
@@ -220,11 +219,12 @@ ul{
 /* END */ 
 
 #data{
-    position: absolute;
+    position: relative;
     display: flex;
-    top: 100px;
+    top: 4px;
     left: 120px;
-    width: 90%;
+    width: 1900px !important;
+    height: 800px;
     margin: 5px;
    
    
@@ -253,19 +253,25 @@ ul{
 #user-info{
     position: relative;
     top: 0px;
-    left: 0%;
+    left: 28px !important;
     width: 400px;
-    height: 800px;
+    height: 790px;
+    margin-bottom: 10px;
     background-color: #253844;
     color: #02daff;
     font-family: 'Roboto';
     font-size: 19px;
     padding: 10px;
+    text-align: center;
 }
 
 #data_user2{
     position: relative;
-    width: 1100px !important;
+    left: 40px !important;
+    width: 58% !important;
+    margin-bottom: 10px;
+    overflow-x: auto;
+    padding: 20px;
 }
 
 #avatar-usr
@@ -430,6 +436,7 @@ ul{
     display: inline-flex;
     text-align: center;
     word-spacing: 20pt;
+    color: rgb(226, 178, 19) !important;
   
 }
 
@@ -445,6 +452,7 @@ ul{
     width: 50%;
     font-size: 30px !important;
     font-family: 'Roboto';
+    color: white;
 }
 
 /* RECORD */
@@ -470,14 +478,14 @@ ul{
     position: relative;
     display: flex;
     top: 20px;
-    width: 1040px;
+    width: 99% !important;
     height: 150px;
     background-color: #131313;
 }
 
 #money{
     position: relative;
-    width: 50%;
+    width: 55%;
     height: 100%;
     padding: 20px;
     text-align: center;
@@ -667,10 +675,11 @@ ul{
 .tab2{
     position: relative;
     left: 150px;
-    top: 50px;
+    top: 10px;
     background-color: #292929;
+    margin-bottom: 10px;
     display: flex;
-    width: 81.3%;
+    width: 1520px;
     border-top-left-radius:5px;
     border-top-right-radius: 5px;
     color: rgb(226, 178, 19);
