--- a/src/app/protected/dashboard/components/side-bar/side-bar.component.css
+++ b/src/app/protected/dashboard/components/side-bar/side-bar.component.css
@@ -21,7 +21,6 @@ body{
     position: relative;
     width: 100%;
     height: 1000px;
-    background-color: red;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -265,7 +264,7 @@ ul{
 
 #data_user2{
     position: relative;
-    width: 1100px !important;
+    width: 50% !important;
 }
 
 #avatar-usr
