--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,11 +1,12 @@
 @font-face {
-    font-family: truly;
-    src: url("../../../assets/fonts/Truly.ttf");
-  }
-  @font-face {
-    font-family: 'Roboto';
-    src: url("../../../assets/fonts/Roboto-Bold.ttf");
-  }
+  font-family: 'Roboto';
+  src: "../../../assets/fonts/Roboto-Bold.ttf";
+}
+
+*{
+  font-family: 'Roboto' !important;
+}
+
 
 .footer{
         position: relative;
@@ -18,6 +19,7 @@
         align-items: center;
         text-align: center;
         font-family: 'Roboto';
+        z-index: 4;
 }
 
 #logo-footer{
