--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
          
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" ></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-3 mb-lg-1">
@@ -15,15 +15,65 @@
           </li>
           -->
         </ul>
+
+        <span class="navbar-text options-2" *ngIf="authService.dataUser.value.id != ''">
+          <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-3">
+                    <img src="../../../assets/img/PNG/Pesitos.png" id="money_usr" alt="">
+                </div>
+                <div class="col-md-3">
+                  <h4> {{  authService.dataUser.value.balance |  currency:'USD' }} </h4> 
+                    
+                </div>
+              </div>
+          </div>
+        </span>
+
         <span class="navbar-text">
-            <div class="container-fluid options-1">
+
+         
+
+          <div class="container options-1" id="r-option"  *ngIf="authService.bar">
+              
+              <div class="row" *ngIf="authService.dataUser.value.id != ''">
+ 
+                <div class="col-md-2">
+                    <hr id="hr-v">
+                </div>
+
+                <div class="col-md-2">
+                  <img id="avatar"   *ngIf="authService.dataUser.value.avatar != ''" [src]="this.authService.user_image" alt="">
+                  <img id="avatar"   *ngIf="authService.dataUser.value.avatar == ''" src="../../../assets/img/PNG/Monito1.png" alt="">
+                  
+                </div>
+
+                <div class="col-md-4">
+                   {{ authService.dataUser.value.userName }}
+                    
+                </div>
+                <div class="col-md-2">
+                  <ul class="navbar-nav">
+                      <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
+                        <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" role="button">
+                        
+                        </a>
+                        <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
+                          <a class="link-d-menu" ngbDropdownItem  (click)="modalServices.open(contenido2, { size: 'xl'})">Editar Perfil</a>
+                          <a class="link-d-menu" ngbDropdownItem href="#" (click)="$event.preventDefault()">Agregar Saldo</a>
+                          <a id="logOut" ngbDropdownItem href="#" (click)="logOut()">Cerrar Sesión</a>
+                        </div>
+                      </li>
+                  </ul>   
+                </div>
+              </div>
                 <div class="row">
 
-                    <div *ngIf="" class="col-md-4">
+                    <div  *ngIf="authService.dataUser.value.id == ''"  class="col-md-4">
                         
                       <app-modal-sign-in></app-modal-sign-in>
                     </div>
-                    <div class="col-md-6">
+                    <div  *ngIf="authService.dataUser.value.id == ''" class="col-md-6">
                         <app-modal-register></app-modal-register>
                     </div>
                 </div>
@@ -31,5 +81,17 @@
         </span>
       </div>
     </div>
-  </nav>
+</nav>
+
+<ng-template #contenido2 let-modal>
+ 
+  <div class="modal-body">
+      <app-modal-edit-usr></app-modal-edit-usr>       
+  </div>
+
+</ng-template>
+
+
+
+  
 
